put email correctly

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <div class="about-info">
                       <p><span class="title-s">Prénom: </span> <span style="color:#BDBDBD;">Odran </span></p>
                       <p><span class="title-s">Profil: </span> <span style="color:#BDBDBD;">Photographe</span></p>
-                      <p><span class="title-s">Email: </span> <span style="color:#BDBDBD;">odran.photographe@gmail.com</span></p>
+                      <p><span class="title-s">Mail: </span> <span style="color:#BDBDBD;">odran.photographe@gmail.com</span></p>
                       <p><span class="title-s">Téléphone: </span> <span style="color:#BDBDBD;"> 0649079085</span></p>
                     </div>
                   </div>
