added gallery 1 and 2 from new template

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DevFolio Bootstrap Template</title>
+  <title>Odran photographe PortFolio</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <meta content="" name="keywords">
   <meta content="" name="description">
@@ -178,12 +178,16 @@
               <div class="work-img">
                 <img src="img/work-1.jpg" alt="" class="img-fluid">
               </div>
+              </a>
+               <a href="galerie1.html">
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Shooting Instagram</h2>
+                    <h2 class="w-title">Photo Instagram</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Shooting</span> / <span class="w-date">OP</span>
+                       <a href="galerie1.html">
+                      <span class="w-ctegory">Galerie 1</span> / <span class="w-date">OP</span>
+                       </a>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -193,7 +197,7 @@
                   </div>
                 </div>
               </div>
-            </a>
+               </a>
           </div>
         </div>
         <div class="col-md-4">
@@ -202,12 +206,16 @@
               <div class="work-img">
                 <img src="img/work-3.jpg" alt="" class="img-fluid">
               </div>
+              </a>
+                <a href="galerie2.html">
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Shooting outdoor</h2>
+                    <h2 class="w-title">Photo StreetWear</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Shooting</span> / <span class="w-date">OP</span>
+                      <a href="galerie2.html">
+                      <span class="w-ctegory">Galerie 2</span> / <span class="w-date">OP</span>
+                      </a>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -217,7 +225,7 @@
                   </div>
                 </div>
               </div>
-            </a>
+                </a>
           </div>
         </div>
         <div class="col-md-4">
@@ -226,12 +234,16 @@
               <div class="work-img">
                 <img src="img/work-6.jpg" alt="" class="img-fluid">
               </div>
+              </a>
+              <a href="galerie2.html">
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Shooting Paris</h2>
+                    <h2 class="w-title">Photo Outdoor</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Shooting</span> / <span class="w-date">OP</span>
+                      <a href="galerie1.html">
+                      <span class="w-ctegory">Galerie 1</span> / <span class="w-date">OP</span>
+                      </a>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -241,7 +253,7 @@
                   </div>
                 </div>
               </div>
-            </a>
+              </a>
           </div>
         </div>
         <div class="col-md-4">
@@ -250,12 +262,16 @@
               <div class="work-img">
                 <img src="img/work-4.jpg" alt="" class="img-fluid">
               </div>
+              </a>
+              <a href="galerie2.html">
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
                     <h2 class="w-title">Photo pro</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Shooting</span> / <span class="w-date">OP</span>
+                      <a href="galerie2.html">
+                      <span class="w-ctegory">Galerie 2</span> / <span class="w-date">OP</span>
+                      </a>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -265,7 +281,7 @@
                   </div>
                 </div>
               </div>
-            </a>
+              </a>
           </div>
         </div>
         <div class="col-md-4">
@@ -274,12 +290,16 @@
               <div class="work-img">
                 <img src="img/work-5.jpg" alt="" class="img-fluid">
               </div>
+              </a>
+              <a href="galerie2.html">
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Shooting couple</h2>
+                    <h2 class="w-title">Photo couple</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Shooting</span> / <span class="w-date">OP</span>
+                      <a href="galerie2.html">
+                      <span class="w-ctegory">Galerie 2</span> / <span class="w-date">OP</span>
+                      </a>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -289,7 +309,7 @@
                   </div>
                 </div>
               </div>
-            </a>
+              </a>
           </div>
         </div>
         <div class="col-md-4">
@@ -298,12 +318,16 @@
               <div class="work-img">
                 <img src="img/work-2.jpg" alt="" class="img-fluid">
               </div>
+              </a>
+              <a href="galerie2.html">
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Shooting Instagram</h2>
+                    <h2 class="w-title">Photo Outdoor</h2>
                     <div class="w-more">
-                      <span class="w-ctegory">Shooting</span> / <span class="w-date">OP</span>
+                      <a href="galerie2.html">
+                      <span class="w-ctegory">Galerie 2</span> / <span class="w-date">OP</span>
+                      </a>
                     </div>
                   </div>
                   <div class="col-sm-4">
@@ -313,7 +337,7 @@
                   </div>
                 </div>
               </div>
-            </a>
+              </a>
           </div>
         </div>
         
